# ml_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
example_config/: config.json
src/: __init__.py  app.py  config.py
src/common/: file_utils.py  schema.py  utils.py
src/processes/: prediction.py  preprocessing.py  training.py
tests/: util_test.py
