[tool.poetry]
name = "ml_template"
version = "0.1.0"
description = "ML template for small-intermediate ML projects"
authors = ["ninz <nreclarin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "^1.9.1"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
