[tool.poetry]
name = "ml_template"
version = "0.1.0"
description = "ML template for small-intermediate ML projects"
authors = ["ninz <nreclarin@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.9.1"
sdd-common = "^2.0.4"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
coverage = "^6.4.3"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
